# airchart-flash-card

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: pages.yml
public/: cards.json
scripts/: build-site.sh
src/legend_cards/: __init__.py  card_data.py  generator.py  models.py  object_renderer.py  specs.py
tests/: test_extract_legend.py  test_flashcard_data.py  test_license.py  test_site_footer.py
web/: app.js  distractors.json  index.html  styles.css
