[project]
name = "airchart-flash-card"
version = "0.1.0"
description = "Reproducible UK airchart legend symbol extractor"
license = "MPL-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13,<3.14"
dependencies = [
    "pillow>=11.3.0",
    "pymupdf==1.26.7",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[project.scripts]
extract-legend = "legend_cards.generator:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legend_cards"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.codegraph",
    "/.debug-journal.md",
    "/.omo",
    "/public",
]

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.13"
pythonPlatform = "All"
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv", "public"]
reportUnusedCallResult = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedVariable = "error"
reportMissingParameterType = "error"
reportPrivateUsage = "error"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportAny = "none"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "ISC001", "D203", "D213", "CPY001", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S603", "PLR2004", "D"]
"src/legend_cards/specs.py" = ["E501", "RUF001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = ["error"]
